tests/ui/conditional-compilation/cfg-attr-unknown-attribute-macro-expansion.stderr
error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-attr-unknown-attribute-macro-expansion.rs:3:27
   |
LL | / macro_rules! foo {
LL | |     () => {
LL | |         #[cfg_attr(all(), unknown)]
   | |                           ^^^^^^^
LL | |
LL | |         fn foo() {}
LL | |     }
LL | | }
   | |_- in this expansion of `foo!`
LL |
LL |   foo!();
   |   ------ in this macro invocation

error: aborting due to previous error

